Add autoprefixer and basic gulp setup

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 /* CSS compiled from SCSS. */
 /* --------------------------------------- */
 * {
-  -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -74,37 +73,25 @@ body {
       font-size: 1.15789rem; } }
 
 a {
-  -webkit-transition: color .1s, background-color .1s;
-  -moz-transition: color .1s, background-color .1s;
-  -ms-transition: color .1s, background-color .1s;
-  -o-transition: color .1s, background-color .1s;
-  transition: color .1s, background-color .1s;
   color: #0E58F5;
-  text-decoration: none; }
+  text-decoration: none;
+  transition: color .1s, background-color .1s; }
   a:hover, a:active, a:focus {
     color: #0B348B;
     text-decoration: none; }
 
 .typeset p a, .typeset li a {
-  background-image: -webkit-linear-gradient(top, transparent 50%, #709cf9 50%);
-  background-image: -moz-linear-gradient(top, transparent 50%, #709cf9 50%);
-  background-image: -o-linear-gradient(top, transparent 50%, #709cf9 50%);
   background-image: linear-gradient(to bottom, transparent 50%, #709cf9 50%);
   background-position: 0 93%;
   background-repeat: repeat-x;
   background-size: 100% 0.15rem;
   text-shadow: 0.1rem 0 #FCFCFC, 0.15rem 0 #FCFCFC, -0.1rem 0 #FCFCFC, -0.15rem 0 #FCFCFC; }
   .typeset p a:hover, .typeset p a:active, .typeset p a:focus, .typeset li a:hover, .typeset li a:active, .typeset li a:focus {
-    background-image: -webkit-linear-gradient(top, transparent 50%, #1257ea 50%);
-    background-image: -moz-linear-gradient(top, transparent 50%, #1257ea 50%);
-    background-image: -o-linear-gradient(top, transparent 50%, #1257ea 50%);
     background-image: linear-gradient(to bottom, transparent 50%, #1257ea 50%); }
+
 .typeset p {
-  -webkit-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-  -moz-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-  -ms-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-  -o-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-  font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
+  -webkit-font-feature-settings: 'kern', 'onum', 'liga';
+          font-feature-settings: 'kern', 'onum', 'liga';
   line-height: 2rem;
   margin-bottom: 1.43999rem;
   padding-top: 0.56001rem; }
@@ -124,16 +111,15 @@ a {
     .typeset p {
       margin-bottom: 1.3821rem;
       padding-top: 0.6179rem; } }
+
 .typeset h1, .typeset h2, .typeset h3, .typeset h4, .typeset h5, .typeset h6 {
-  -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-  -moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-  -ms-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-  -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-  font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
   color: #2E2E2E;
   font-family: Helvetica, sans-serif;
+  -webkit-font-feature-settings: 'dlig', 'liga', 'lnum', 'kern';
+          font-feature-settings: 'dlig', 'liga', 'lnum', 'kern';
   font-style: normal;
   font-weight: 700; }
+
 .typeset h1, .typeset .alpha {
   line-height: 3rem;
   font-size: 2.33333rem;
@@ -159,6 +145,7 @@ a {
       font-size: 2.63158rem;
       margin-bottom: 0.36841rem;
       padding-top: 0.63159rem; } }
+
 .typeset h2, .typeset .beta {
   line-height: 3rem;
   font-size: 2.08333rem;
@@ -184,6 +171,7 @@ a {
       font-size: 2.31053rem;
       margin-bottom: 0.26246rem;
       padding-top: 0.73754rem; } }
+
 .typeset h3, .typeset .gamma {
   line-height: 3rem;
   font-size: 1.86667rem;
@@ -209,6 +197,7 @@ a {
       font-size: 1.85789rem;
       margin-bottom: 0.1131rem;
       padding-top: 0.8869rem; } }
+
 .typeset h4, .typeset .delta {
   line-height: 2rem;
   font-size: 1.66667rem;
@@ -234,6 +223,7 @@ a {
       font-size: 1.63684rem;
       margin-bottom: -0.45985rem;
       padding-top: 0.45985rem; } }
+
 .typeset h5, .typeset .epsilon {
   line-height: 2rem;
   font-size: 1.49167rem;
@@ -259,6 +249,7 @@ a {
       font-size: 1.31579rem;
       margin-bottom: -0.5658rem;
       padding-top: 0.5658rem; } }
+
 .typeset h6, .typeset .zeta {
   line-height: 2rem;
   font-size: 1.33333rem;
@@ -284,6 +275,7 @@ a {
       font-size: 1.15789rem;
       margin-bottom: -0.6179rem;
       padding-top: 0.6179rem; } }
+
 .typeset ul, .typeset ol {
   line-height: 2rem;
   margin-bottom: 1.43999rem;
@@ -305,11 +297,8 @@ a {
       margin-bottom: 1.3821rem;
       padding-top: 0.6179rem; } }
   .typeset ul li, .typeset ol li {
-    -webkit-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-    -moz-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-    -ms-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-    -o-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-    font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
+    -webkit-font-feature-settings: 'kern', 'onum', 'liga';
+            font-feature-settings: 'kern', 'onum', 'liga';
     margin-left: 2rem; }
     @media screen and (min-width: 40em) {
       .typeset ul li, .typeset ol li {
@@ -318,17 +307,15 @@ a {
       padding-top: 1rem;
       margin-bottom: 1rem;
       margin-left: 2rem; }
+
 .typeset ol {
   list-style-type: none; }
   .typeset ol li {
     counter-increment: top-level; }
     .typeset ol li:before {
-      -webkit-font-feature-settings: 'lnum' 1, 'tnum' 1;
-      -moz-font-feature-settings: 'lnum' 1, 'tnum' 1;
-      -ms-font-feature-settings: 'lnum' 1, 'tnum' 1;
-      -o-font-feature-settings: 'lnum' 1, 'tnum' 1;
-      font-feature-settings: 'lnum' 1, 'tnum' 1;
       content: counter(top-level) ".";
+      -webkit-font-feature-settings: 'lnum', 'tnum';
+              font-feature-settings: 'lnum', 'tnum';
       margin-left: -3rem;
       position: absolute;
       text-align: right;
@@ -349,6 +336,7 @@ a {
         counter-increment: sub-sub-level; }
         .typeset ol li ol li ol li:before {
           content: counter(top-level) "." counter(sub-level) "." counter(sub-sub-level); }
+
 .typeset dl {
   line-height: 2rem;
   margin-bottom: 1.43999rem;
@@ -370,11 +358,8 @@ a {
       margin-bottom: 1.3821rem;
       padding-top: 0.6179rem; } }
   .typeset dl dt, .typeset dl dd {
-    -webkit-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-    -moz-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-    -ms-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-    -o-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-    font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
+    -webkit-font-feature-settings: 'kern', 'onum', 'liga';
+            font-feature-settings: 'kern', 'onum', 'liga';
     margin-left: 2rem; }
     @media screen and (min-width: 40em) {
       .typeset dl dt, .typeset dl dd {
@@ -383,13 +368,11 @@ a {
     font-weight: 700; }
   .typeset dl dd + dt {
     padding-top: 1rem; }
+
 .typeset table {
-  -webkit-font-feature-settings: 'liga' 1, 'lnum' 1, 'tnum' 1, 'kern' 1;
-  -moz-font-feature-settings: 'liga' 1, 'lnum' 1, 'tnum' 1, 'kern' 1;
-  -ms-font-feature-settings: 'liga' 1, 'lnum' 1, 'tnum' 1, 'kern' 1;
-  -o-font-feature-settings: 'liga' 1, 'lnum' 1, 'tnum' 1, 'kern' 1;
-  font-feature-settings: 'liga' 1, 'lnum' 1, 'tnum' 1, 'kern' 1;
   font-family: Helvetica, sans-serif;
+  -webkit-font-feature-settings: 'liga', 'lnum', 'tnum', 'kern';
+          font-feature-settings: 'liga', 'lnum', 'tnum', 'kern';
   font-style: normal;
   font-weight: 400;
   width: 100%;
@@ -443,10 +426,13 @@ a {
         font-size: 1.15789rem;
         margin-bottom: -0.6179rem;
         padding-top: 0.6179rem; } }
+
 .typeset b, .typeset strong, .typeset .bold {
   font-weight: 700; }
+
 .typeset em, .typeset i, .typeset .italic {
   font-style: italic; }
+
 .typeset small, .typeset .caption {
   font-family: Helvetica, sans-serif;
   font-style: normal;
@@ -464,8 +450,10 @@ a {
   @media screen and (min-width: 100em) {
     .typeset small, .typeset .caption {
       font-size: 0.82105rem; } }
+
 .typeset small {
   line-height: 1rem; }
+
 .typeset .caption {
   color: #BDC8CC;
   line-height: 2rem;
@@ -487,10 +475,13 @@ a {
     .typeset .caption {
       margin-bottom: 1.27094rem;
       padding-top: 0.72906rem; } }
+
 .typeset h1 + .caption, .typeset .alpha + .caption, .typeset h2 + .caption, .typeset .beta + .caption, .typeset h3 + .caption, .typeset .gamma + .caption {
   margin-top: -1rem; }
+
 .typeset .delta + .caption, .typeset .epsilon + .caption, .typeset .zeta + .caption {
   margin-top: 0rem; }
+
 .typeset blockquote p {
   border-left: 0.15rem solid #0E58F5;
   font-style: italic;
@@ -513,12 +504,12 @@ a {
     .typeset blockquote p {
       margin-bottom: 1.7642rem;
       padding-bottom: 0.6179rem; } }
+
 @media screen and (min-width: 40em) {
   .typeset blockquote {
     margin-left: -1rem; } }
+
 .typeset hr {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(#BDC8CC));
-  background-image: -webkit-linear-gradient(top, transparent 50%, #BDC8CC 50%);
   background-image: linear-gradient(to bottom, transparent 50%, #BDC8CC 50%);
   background-position: 0 50%;
   background-repeat: repeat-x;
@@ -527,9 +518,11 @@ a {
   margin: 0;
   padding-bottom: 3rem;
   padding-top: 3rem; }
+
 .typeset code, .typeset pre {
   background-color: #F5F4F2;
   font-family: Menlo, monospace; }
+
 .typeset pre {
   display: block;
   margin-bottom: 2rem;
@@ -538,6 +531,7 @@ a {
   white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word; }
+
 .typeset code {
   line-height: 1rem;
   font-size: 1.06667rem; }
@@ -553,28 +547,27 @@ a {
   @media screen and (min-width: 100em) {
     .typeset code {
       font-size: 0.82105rem; } }
+
 .typeset .upper {
+  -webkit-font-kerning: normal;
+          font-kerning: normal;
   letter-spacing: 0.1rem;
   text-transform: uppercase; }
+
 .typeset .small-caps {
-  -webkit-font-feature-settings: 'smcp' 1, 'kern' 1;
-  -moz-font-feature-settings: 'smcp' 1, 'kern' 1;
-  -ms-font-feature-settings: 'smcp' 1, 'kern' 1;
-  -o-font-feature-settings: 'smcp' 1, 'kern' 1;
-  font-feature-settings: 'smcp' 1, 'kern' 1;
+  -webkit-font-feature-settings: 'smcp', 'kern';
+          font-feature-settings: 'smcp', 'kern';
+  -webkit-font-kerning: normal;
+          font-kerning: normal;
   letter-spacing: 0.1rem; }
+
 .typeset .lining-numerals {
-  -webkit-font-feature-settings: 'lnum' 1, 'kern' 1;
-  -moz-font-feature-settings: 'lnum' 1, 'kern' 1;
-  -ms-font-feature-settings: 'lnum' 1, 'kern' 1;
-  -o-font-feature-settings: 'lnum' 1, 'kern' 1;
-  font-feature-settings: 'lnum' 1, 'kern' 1; }
+  -webkit-font-feature-settings: 'lnum', 'kern';
+          font-feature-settings: 'lnum', 'kern'; }
+
 .typeset .oldstyle-numerals {
-  -webkit-font-feature-settings: 'onum' 1, 'kern' 1;
-  -moz-font-feature-settings: 'onum' 1, 'kern' 1;
-  -ms-font-feature-settings: 'onum' 1, 'kern' 1;
-  -o-font-feature-settings: 'onum' 1, 'kern' 1;
-  font-feature-settings: 'onum' 1, 'kern' 1; }
+  -webkit-font-feature-settings: 'onum', 'kern';
+          font-feature-settings: 'onum', 'kern'; }
 
 .section {
   margin: 0 auto;
@@ -626,15 +619,24 @@ a {
 
 @media screen and (min-width: 40em) {
   .column--duo {
-    width: 50%; } }
+    width: 50%; }
+    .column--duo:nth-child(3n) {
+      clear: left; }
+    .column--duo:nth-child(n+3) {
+      margin-top: 2rem; } }
 
 @media screen and (min-width: 40em) {
   .column--trio {
-    width: 33.333%; } }
+    width: 33.333%; }
+    .column--trio:nth-child(4n) {
+      clear: left; }
+    .column--trio:nth-child(n+4) {
+      margin-top: 2rem; } }
 
 @media screen and (min-width: 40em) {
   .column--quad {
     width: 50%; } }
+
 @media screen and (min-width: 50em) {
   .column--quad {
     width: 25%; } }
@@ -642,12 +644,15 @@ a {
 @media screen and (min-width: 40em) {
   .column--main {
     max-width: 65%; } }
+
 @media screen and (min-width: 50em) {
   .column--main {
     max-width: 65%; } }
+
 @media screen and (min-width: 64em) {
   .column--main {
     max-width: 65%; } }
+
 @media screen and (min-width: 100em) {
   .column--main {
     max-width: 63.53846%; } }
@@ -656,13 +661,16 @@ a {
   .column--sidebar {
     padding-right: 2rem;
     max-width: 35%; } }
+
 @media screen and (min-width: 50em) {
   .column--sidebar {
     max-width: 35%; } }
+
 @media screen and (min-width: 64em) {
   .column--sidebar {
     padding-right: 4rem;
     max-width: 35%; } }
+
 @media screen and (min-width: 100em) {
   .column--sidebar {
     max-width: 36.46154%; } }
@@ -671,6 +679,7 @@ a {
   .column--main + .column--sidebar {
     padding-left: 2rem;
     padding-right: 1rem; } }
+
 @media screen and (min-width: 64em) {
   .column--main + .column--sidebar {
     padding-left: 4rem;
@@ -688,6 +697,7 @@ a {
   .column--quad li,
   .column--sidebar li {
     font-size: 0.99412rem; } }
+
 @media screen and (min-width: 100em) {
   .column--trio p,
   .column--quad p,
@@ -705,18 +715,22 @@ a {
   .column--right {
     max-width: 65%;
     margin-left: 35%; } }
+
 @media screen and (min-width: 50em) {
   .column--right {
     max-width: 65%;
     margin-left: 35%; } }
+
 @media screen and (min-width: 64em) {
   .column--right {
     max-width: 65%;
     margin-left: 35%; } }
+
 @media screen and (min-width: 100em) {
   .column--right {
     max-width: 63.53846%;
     margin-left: 36.46154%; } }
+
 @media screen and (min-width: 40em) {
   .column--right .sidenote {
     left: 0;
@@ -724,13 +738,16 @@ a {
     padding-right: 2rem;
     position: absolute;
     max-width: 35%; } }
+
 @media screen and (min-width: 50em) {
   .column--right .sidenote {
     max-width: 35%; } }
+
 @media screen and (min-width: 64em) {
   .column--right .sidenote {
     padding-right: 4rem;
     max-width: 35%; } }
+
 @media screen and (min-width: 100em) {
   .column--right .sidenote {
     padding-left: 2rem;
@@ -739,15 +756,19 @@ a {
 @media screen and (min-width: 40em) {
   .column--left {
     max-width: 65%; } }
+
 @media screen and (min-width: 50em) {
   .column--left {
     max-width: 65%; } }
+
 @media screen and (min-width: 64em) {
   .column--left {
     max-width: 65%; } }
+
 @media screen and (min-width: 100em) {
   .column--left {
     max-width: 63.53846%; } }
+
 @media screen and (min-width: 40em) {
   .column--left .sidenote {
     padding-left: 2rem;
@@ -755,15 +776,18 @@ a {
     position: absolute;
     max-width: 35%;
     left: 65%; } }
+
 @media screen and (min-width: 50em) {
   .column--left .sidenote {
     max-width: 35%;
     left: 65%; } }
+
 @media screen and (min-width: 64em) {
   .column--left .sidenote {
     padding-left: 4rem;
     max-width: 35%;
     left: 65%; } }
+
 @media screen and (min-width: 100em) {
   .column--left .sidenote {
     padding-right: 2rem;
@@ -822,9 +846,11 @@ img {
   margin: 0;
   padding: 0;
   width: 100%; }
+
 .nav-collapse li {
   display: block;
   width: 100%; }
+
 .nav-collapse.opened {
   max-height: 9999px; }
 
@@ -860,6 +886,7 @@ img {
     display: inline-block;
     width: calc(100% - 132px - 2rem);
     vertical-align: middle; } }
+
 .main-nav .main-nav__list {
   border-top: 0.1rem solid #d9d9d9; }
   @media screen and (min-width: 40em) {
@@ -869,6 +896,7 @@ img {
       margin-left: 0;
       text-align: right;
       width: 100%; } }
+
 .main-nav li {
   font-family: Helvetica, sans-serif;
   font-style: normal;
@@ -919,6 +947,7 @@ img {
     display: inline-block;
     max-height: none;
     position: relative; } }
+
 .js .nav-toggle {
   display: block;
   line-height: 0;
@@ -986,9 +1015,6 @@ img {
       font-size: 0.92632rem; } }
 
 #baseline.show-grid {
-  background-image: -webkit-linear-gradient(top, cyan 0, rgba(255, 255, 255, 0) 1px);
-  background-image: -moz-linear-gradient(top, cyan 0, rgba(255, 255, 255, 0) 1px);
-  background-image: -o-linear-gradient(top, cyan 0, rgba(255, 255, 255, 0) 1px);
   background-image: linear-gradient(to bottom, cyan 0, rgba(255, 255, 255, 0) 1px);
   background-repeat: repeat-y;
   background-size: 100% 1rem; }
