--- a/assets/sass/sassline-base/_mixins.scss
+++ b/assets/sass/sassline-base/_mixins.scss
@@ -229,8 +229,10 @@ $max-widths: map-values($maxwidths);
   // Check if value exists in scale.
   $in-scale: in-modular-scale(scale-0, $fontsize);
 
-  // Set the line-height.
-  line-height: #{$lineheight}rem;
+  // Set the line-height (if it isn’t set at 0).
+  @if $lineheight != 0 {
+    line-height: #{$lineheight}rem;
+  }
 
   // If specifying a breakpoint to use (and breakpoint exists).
   @if $break-value == number and $breakpoint <= ($breakpoints-limit - 1) and $breakpoint >= 0 {
