--- a/assets/sass/sassline-base/_layouts.scss
+++ b/assets/sass/sassline-base/_layouts.scss
@@ -45,20 +45,39 @@
 
 // Two columns.
 .column--duo {
+
   @include breakpoint(break-1) {
     width: 50%;
+
+    &:nth-child(3n) {
+      clear: left;
+    }
+
+    &:nth-child(n+3) {
+      margin-top: 2rem;
+    }
   }
 }
 
 // Three columns.
 .column--trio {
+
   @include breakpoint(break-1) {
     width: 33.333%;
+
+    &:nth-child(4n) {
+      clear: left;
+    }
+
+    &:nth-child(n+4) {
+      margin-top: 2rem;
+    }
   }
 }
 
 // Four columns. Two at smaller breakpoints.
 .column--quad {
+
   @include breakpoint(break-1) {
     width: 50%;
   }
@@ -72,6 +91,7 @@
 
 // Main column.
 .column--main {
+
   @include breakpoint(break-1) {
     @include ideal-measure(1, small);
   }
@@ -91,8 +111,10 @@
 
 // Sidebar.
 .column--sidebar {
+
   @include breakpoint(break-1) {
     padding-right: map-get($gutterwidths, medium);
+
     @include ideal-measure(1, small, false);
   }
 
@@ -102,6 +124,7 @@
 
   @include breakpoint(break-3) {
     padding-right: map-get($gutterwidths, large);
+
     @include ideal-measure(3, medium, false);
   }
 
@@ -127,7 +150,9 @@
 .column--trio,
 .column--quad,
 .column--sidebar {
+
   @include breakpoint(break-3) {
+
     p {
       @include sassline($fontsize: eta, $font: $bodytype, $lineheight: 2, $below: 2, $breakpoint: 3);
     }
@@ -138,6 +163,7 @@
   }
 
   @include breakpoint(break-4) {
+
     p {
       @include sassline($fontsize: eta, $font: $bodytype, $lineheight: 2, $below: 2, $breakpoint: 4);
     }
@@ -151,6 +177,7 @@
 // Main column on the right with inline sidenotes.
 // The sidenotes will move out the column into the sidebar position aligned to the baseline.
 .column--right {
+
   @include breakpoint(break-1) {
     @include ideal-measure(1, small);
     @include ideal-measure(1, small, false, margin-left);
@@ -172,11 +199,13 @@
   }
 
   .sidenote {
+
     @include breakpoint(break-1) {
       left: 0;
       padding-left: map-get($gutterwidths, small);
       padding-right: map-get($gutterwidths, medium);
       position: absolute;
+
       @include ideal-measure(1, small, false);
     }
 
@@ -186,11 +215,13 @@
 
     @include breakpoint(break-3) {
       padding-right: map-get($gutterwidths, large);
+
       @include ideal-measure(3, medium, false);
     }
 
     @include breakpoint(break-4) {
       padding-left: map-get($gutterwidths, medium);
+
       @include ideal-measure(4, medium, false);
     }
   }
@@ -198,6 +229,7 @@
 
 // Main column on the left with inline sidenotes.
 .column--left {
+
   @include breakpoint(break-1) {
     @include ideal-measure(1, small);
   }
@@ -215,10 +247,12 @@
   }
 
   .sidenote {
+
     @include breakpoint(break-1) {
       padding-left: map-get($gutterwidths, medium);
       padding-right: map-get($gutterwidths, small);
       position: absolute;
+
       @include ideal-measure(1, small, false);
       @include ideal-measure(1, small, true, left);
     }
@@ -230,12 +264,14 @@
 
     @include breakpoint(break-3) {
       padding-left: map-get($gutterwidths, large);
+
       @include ideal-measure(3, medium, false);
       @include ideal-measure(3, medium, true, left);
     }
 
     @include breakpoint(break-4) {
       padding-right: map-get($gutterwidths, medium);
+
       @include ideal-measure(4, medium, false);
       @include ideal-measure(4, medium, true, left);
     }
