--- a/assets/sass/sassline-base/_variables.scss
+++ b/assets/sass/sassline-base/_variables.scss
@@ -94,3 +94,7 @@ $white: #FFFFFF !default;
 // Background colours.
 $backgroundColour: #FCFCFC !default;
 $codeBackgroundColour: #F5F4F2 !default;
+
+// Anchor properties.
+$anchorTransitionTime: .1s !default;  
+$anchorUnderlineLightnessRatio: 20% !default;
