Prevent `li` of `ul` from incrementing the counter

--- a/assets/sass/sassline-base/_typography.scss
+++ b/assets/sass/sassline-base/_typography.scss
@@ -135,6 +135,7 @@ a {
       ul {
 
         li {
+          counter-increment: none;
 
           &:before {
             content: '';
@@ -165,6 +166,7 @@ a {
           ul {
 
             li {
+              counter-increment: none;
 
               &:before {
                 content: '';
